# knin

./: README
Cinterpolation_permutation/: CMakeLists.txt  a.out  assembly.c  assembly.h  fpx.c  fpx.h  gnu_script.c  gnu_script.h  interpolation.c  interpolation.h  main.c  main.h  permutation.c  permutation.h  point.c  point.h  tools_math.c  tools_math.h  type_macro.c
Cinterpolation_permutation/Interpolation/: Px.c  Px.h  interpolation.c  interpolation.h  pdy.c  pdy.h
Cinterpolation_permutation/Interpolation/Px_Assembly/: Assembly.c  Assembly.h
Cinterpolation_permutation/Permutation/: permutation.c  permutation.h
Cinterpolation_permutation/data_type/: macro_data_type.h
Cinterpolation_permutation/math/: Point.h  combinatoria.c  combinatoria.h  fatorial.c  fatorial.h  invert_array.c  invert_array.h  length.c  length.h  macros.h  pow.c  pow.h  type_operator.c  type_operator.h
Crypt/: crypt_main.c  explait.c  explait.h  tree.c  tree.h
FILE_STREAM/: common.h  input.c  input.h  output.c
IE_KNIN/: CMakeLists.txt  assembly.c  foreach.h  fpx.c  fpx.h  interpolation.h  main.c  point.c  tools_math.c  type_macro.h
IE_KNIN_CPP/: CMakeLists.txt  assembly.cpp  assembly.h  enum.h  fpx.cpp  fpx.h  interpolation.cpp  interpolation.h  main.cpp  permutation.cpp  permutation.h  point.cpp  point.h  tools_math.cpp  tools_math.h
Jexplait/: Header.h  Jexplait.sln  main.c  main.cpp  struct_tree.c  tree.h
Jthread/: module_syncronize.sln
Study/: common.h  main.c
cube/: a.out  corpo.c  header.h  main.c  make.sh  make_disp  map.c  message.c  msg.h
feed/: index.sh  rss_knin.sh  rss_knin_beta.sh  rss_knin_beta2.sh  temp.sh
(+55 files in other folders)
